--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "jot",
-  "version": "1.0.0",
-  "description": "JWT decoder, encoder, and more.",
+  "name": "jwt-authn",
+  "version": "1.0.9",
+  "description": "JWT decoder, encoder, and more",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
