--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jwt-authn",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "description": "JWT decoder, encoder, and more",
-  "main": "index.js",
-  "type": "module",
+  "main": "./lib",
   "scripts": {
+    "build": "babel ./src -d ./lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,5 +26,12 @@
   "bugs": {
     "url": "https://github.com/akdombrowski/jot/issues"
   },
-  "homepage": "https://github.com/akdombrowski/jot#readme"
+  "homepage": "https://github.com/akdombrowski/jot#readme",
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  }
 }
