--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lib",
   "scripts": {
     "build": "babel ./src -d ./lib",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
