--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib",
   "scripts": {
     "build": "babel ./src -d ./lib",
-    "test": "mocha --require babel-core/register",
+    "test": "nyc mocha --require babel-core/register",
     "lint": "eslint ./src"
   },
   "repository": {
@@ -35,6 +35,13 @@
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "mocha": "^8.3.2"
+    "mocha": "^8.3.2",
+    "nyc": "^15.1.0"
+  },
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text"
+    ]
   }
 }
