--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jwt-authn",
-  "version": "1.0.11",
+  "version": "1.0.16",
   "description": "JWT decoder, encoder, and more",
-  "main": "./lib",
+  "main": "src/index.js",
   "scripts": {
     "build": "babel ./src -d ./lib",
     "test": "nyc mocha --require babel-core/register",
@@ -43,5 +43,6 @@
       "lcov",
       "text"
     ]
-  }
+  },
+  "prepublishOnly": "npm run build"
 }
