--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jwt-authn",
-  "version": "1.0.25",
+  "version": "1.0.27",
   "description": "JWT decoder, encoder, and more",
   "main": "./lib",
   "scripts": {
@@ -44,5 +44,8 @@
       "text"
     ]
   },
-  "prepublishOnly": "npm run build"
+  "prepublishOnly": "npm run build",
+  "dependencies": {
+    "base64url": "^3.0.1"
+  }
 }
