--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,7 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "quotes": ["error", "double", { "allowTemplateLiterals": true }]
+  }
 }
