--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "braces": ">=2.3.1",
+    "chai": "^4.3.4",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
