--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/akdombrowski/jot#readme",
   "devDependencies": {
+    "@babel/register": "^7.13.8",
     "babel-cli": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "braces": ">=2.3.1",
