--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "modules": true
-      }
-    ]
-  ]
+  "presets": [ "@babel/preset-env" ]
 }
