--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "tyoe": "module",
   "scripts": {
     "build": "babel ./src -d ./lib",
-    "test": "nyc mocha --require babel-core/register",
+    "test": "nyc mocha --require @babel/register",
     "lint": "eslint ./src"
   },
   "repository": {
@@ -32,14 +32,11 @@
   },
   "homepage": "https://github.com/akdombrowski/jot#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.13.12",
     "@babel/register": "^7.13.8",
     "babel-cli": "^6.18.0",
-    "babel-preset-env": "^1.7.0",
     "braces": ">=2.3.1",
     "chai": "^4.3.4",
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0"
   },
@@ -49,8 +46,5 @@
       "text"
     ]
   },
-  "prepublishOnly": "npm run build",
-  "dependencies": {
-    "base64url": "^3.0.1"
-  }
+  "prepublishOnly": "npm run build"
 }
