--- a/package.json
+++ b/package.json
@@ -22,7 +22,25 @@
     "authentication",
     "authorization",
     "jwt-decoder",
-    "jwt-encoder"
+    "jwt-encoder",
+    "token",
+    "jwt decoder",
+    "jwt encoder",
+    "JSON",
+    "crypto",
+    "nodejs",
+    "authn",
+    "authz",
+    "sha256",
+    "rs256",
+    "jws",
+    "alg",
+    "verify",
+    "sign",
+    "signature",
+    "header",
+    "payload",
+    "base64url"
   ],
   "author": "Anthony Dombrowski",
   "license": "GNU GPLv3",
