--- a/package.json
+++ b/package.json
@@ -57,14 +57,12 @@
     "@istanbuljs/nyc-config-babel": "^3.0.0",
     "braces": ">=3.0.2",
     "chai": "^4.3.4",
+    "core-js": "^3.10.0",
     "cross-env": "^7.0.3",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0"
   },
   "prepublishOnly": "npm run build",
-  "dependencies": {
-    "core-js": "^3.10.0"
-  },
   "nyc": {
     "require": [
       "@babel/register"
