--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/register": "^7.13.14",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "braces": ">=3.0.2",
     "chai": "^4.3.4",
     "core-js": "^3.10.0",
