--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jwt-authn",
   "version": "1.0.35",
-  "description": "JWT decoder, encoder, and more",
+  "description": "JWT decoder, encoder, and more with only Node >=15.x as a dependency.",
   "main": "./lib",
   "scripts": {
     "build": "babel ./src -d ./lib",
