--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,9 @@
 {
-  "presets": [
-    "@babel/preset-env"
-  ],
+  "presets": ["@babel/preset-env"],
   "env": {
     "test": {
-      "plugins": [
-        "istanbul"
-      ]
+      "plugins": ["istanbul"]
     }
-  }
+  },
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
