--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "JWT decoder, encoder, and more with only Node >=15.x as a dependency.",
   "main": "./lib",
   "scripts": {
+    "prepare": "npm run build",
     "build": "npm run babelify && npm run minify",
     "test": "cross-env NODE_ENV=test nyc mocha test",
     "cli-test": "jwt-authn \"abc\"",
-    "prepublish": "npm run build",
     "babelify": "babel ./src/index.js -d ./lib/ && babel ./cli/index.js -d ./cli_lib/",
     "minify": "minify ./lib/index.js > ./lib/index.min.js && minify ./cli/index.js > ./cli/index.min.js"
   },
@@ -66,9 +66,9 @@
     "cross-env": "^7.0.3",
     "minify": "^7.0.1",
     "mocha": "^8.3.2",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "sinon": "^10.0.0"
   },
-  "prepublishOnly": "npm run build",
   "nyc": {
     "require": [
       "@babel/register"
