--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,6 +20,10 @@ title: jwt-authn
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   jwt-authn is an npm package for decoding, encoding, verifying, and signing JWTs.
+url: >- # the base hostname & protocol for your site e.g.
+  "https://akdombrowski.github.io"
+baseurl: >- # the subpath of your site, e.g.
+  "/jwt-authn"
 twitter_username: akatsdombrowski
 github_username: akdombrowski
 minimal_mistakes_skin: dark
