--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,6 +16,7 @@ gem "github-pages", "~> 219", group: :jekyll_plugins
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+locale: "en-US"
 title: jwt-authn
 email:
 description: >- # this means to ignore newlines until "baseurl:"
