--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,9 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 url: >- # the base hostname & protocol for your site e.g.
   "https://akdombrowski.github.io"
 baseurl: >- # the subpath of your site, e.g.
-  "/jwt-authn"
-repository: >- # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-  "akdombrowski/jwt-authn"
+  /jwt-authn
 twitter_username: akatsdombrowski
 github_username: akdombrowski
 minimal_mistakes_skin: dark
