--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -39,6 +39,7 @@ permalink: /:categories/:title/
 paginate: 50 # amount of posts to show
 paginate_path: /page:num/
 timezone: America/Chicago # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+encoding: UTF-8
 
 analytics:
   provider: "google"
