--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,6 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   jwt-authn is an npm package for decoding, encoding, verifying, and signing JWTs.
 url: >- # the base hostname & protocol for your site e.g.
   "https://www.jwtauthn.com"
+baseurl: /
 twitter_username: akatsdombrowski
 github_username: akdombrowski
 github: [metadata]
