tests are passing but need to work on 1

--- a/.mocharc.yaml
+++ b/.mocharc.yaml
@@ -1,4 +1,5 @@
 require:
-  - 'core-js'
-  - 'regenerator-runtime'
-  - '@babel/register'
+  - "core-js"
+  - "regenerator-runtime"
+  - "@babel/register"
+  - "test/hooks.js"
