--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,16 @@
       "request": "launch",
       "name": "Mocha All",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-      "args": ["--timeout", "999999", "--colors", "${workspaceFolder}/test"],
+      "args": [
+        "--timeout",
+        "999999",
+        "--colors",
+        "${workspaceFolder}/test",
+        "-R",
+        "spec",
+        "--config",
+        "${workspaceFolder}/.mocharc.yaml"
+      ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**/*.js"]
@@ -26,7 +35,16 @@
       "request": "launch",
       "name": "Mocha Current File",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-      "args": ["--timeout", "999999", "--colors", "${file}"],
+      "args": [
+        "--timeout",
+        "999999",
+        "--colors",
+        "${file}",
+        "-R",
+        "spec",
+        "--config",
+        "${workspaceFolder}/.mocharc.yaml"
+      ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**/*.js"]
