remove default spec argument

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prepare": "npm run build",
     "build": "npm run babelify && npm run minify",
-    "test": "cross-env NODE_ENV=test nyc mocha test -R spec",
+    "test": "cross-env NODE_ENV=test nyc mocha test",
     "test-no-catch": "cross-env NODE_ENV=test nyc mocha test -R spec --allow-uncaught",
     "babelify": "babel ./src/index.js -d ./lib/ && babel ./cli/index.js -d ./cli_lib/",
     "minify": "minify ./lib/index.js > ./lib/index.min.js && minify ./cli/index.js > ./cli/index.min.js"
