--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/akdombrowski/jwt-authn.git"
+    "url": "https://github.com/akdombrowski/jwt-authn.git"
   },
   "keywords": [
     "jwt",
