can't get test coverage report need to test using this module

--- a/.mocharc.yaml
+++ b/.mocharc.yaml
@@ -1,5 +1,5 @@
 require:
-  - "core-js"
-  - "regenerator-runtime"
+  # - "core-js"
+  # - "regenerator-runtime"
   - "@babel/register"
   - "test/hooks.js"
