--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prepare": "npm run build",
     "build": "npm run babelify",
     "test": "cross-env NODE_ENV=test npm run nycest",
-    "nycest": "nyc npm run test",
+    "nycest": "nyc mocha test",
+    "mocha": "mocha test",
     "babelify": "babel ./src/index.js -o ./lib/index.js && babel ./cli/index.js -o ./cli_lib/index.js",
     "tersify": "terser ./src/index.js -f quote_style=2 -o ./src/index.min.js -c -m --sourcemap && terser ./cli/index.js -f quote_style=2 -o ./cli/index.min.js -c -m --sourcemap && terser ./cli_lib/index.js -f quote_style=2 -o ./cli_lib/index.min.js -c -m --sourcemap && terser ./lib/index.js -f quote_style=2 -o ./lib/index.min.js -c -m --sourcemap"
   },
