--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [15.x]
+        node-version: [16.20.2]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
