--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "./lib/index.min.js",
   "bin": {
-    "jwt": "./cli_lib/index.min.js"
+    "jwt": "cli_lib/index.min.js"
   },
   "files": [
     "./src/index.min.js",
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/akdombrowski/jwt-authn.git"
+    "url": "git+https://github.com/akdombrowski/jwt-authn.git"
   },
   "keywords": [
     "jwt",
