--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.0",
   "description": "JWT decoder, encoder, and more with only Node >=18.18.2 as a requirement and clipboardy as the only dependency.",
   "author": "Anthony Dombrowski",
-  "license": "MIT-Modern-Variant",
+  "license": "MIT",
   "homepage": "https://github.com/akdombrowski/jwt-authn#readme",
   "bugs": {
     "url": "https://github.com/akdombrowski/jwt-authn/issues"
