update yarnrc for CI

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,3 @@
-yarnPath: .yarn/releases/yarn-4.4.0.cjs
+yarnPath: .yarn/releases/yarn-4.4.0.cjs,
+enableInlineBuilds: true,
+enableHardenedMode: false
