--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,3 @@
-yarnPath: .yarn/releases/yarn-4.4.0.cjs,
-enableInlineBuilds: true,
+yarnPath: .yarn/releases/yarn-4.4.0.cjs
+enableInlineBuilds: true
 enableHardenedMode: false
